# satellite

./: .travis.yml  README.md  meson.build
data/: com.github.ryanafrish7.satellite.appdata.xml  com.github.ryanafrish7.satellite.appdata.xml.in  com.github.ryanafrish7.satellite.desktop  com.github.ryanafrish7.satellite.desktop.in  meson.build
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.ryanafrish7.satellite.pot  fr.po  nl.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
src/: Application.vala  MainWindow.vala  Orchestrator.vala  meson.build
src/Models/: ProcessCPUUsage.vala  ProcessInfo.vala  ProcessMemoryUsage.vala  SystemMemoryUsage.vala
src/Providers/: MemoryUsageProvider.vala
src/Shared/: TreeViewUtils.vala
src/Stores/: AbstractModel.vala  CPUViewModel.vala
src/Views/: CPUView.vala  MemoryView.vala
src/models/: ProcessInfo.vala
src/providers/: ProcessCPUUsageProvider.vala  ProcessInfoProvider.vala  ProcessUsageProvider.vala
src/shared/: TreeViewUtils.vala
src/stores/: CPUViewModel.vala  MemoryViewModel.vala
src/views/: CPUView.vala  MemoryView.vala
vapi/: libgtop-2.0.vapi
