sources = files(
    'Application.vala',
    'MainWindow.vala',
    'Orchestrator.vala',
    'Shared/TreeViewUtils.vala',
    'Models/ProcessInfo.vala',
    'Models/ProcessCPUUsage.vala',
    'Models/ProcessMemoryUsage.vala',
    'Models/SystemMemoryUsage.vala',
    'Views/CPUView.vala',
    'Views/MemoryView.vala',
    'Providers/ProcessInfoProvider.vala',
    'Providers/ProcessCPUUsageProvider.vala',
    'Providers/MemoryUsageProvider.vala',
    'Stores/AbstractModel.vala',
    'Stores/CPUViewModel.vala',
    'Stores/MemoryViewModel.vala'
)